[tool.poetry]
name = "cardano_auth_backend"
version = "0.1.0"
description = "Backend for Cardano Wallet Authentication"
authors = ["Hareem Adderley <hadderley@kingpinapps.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pycardano = {git = "ssh://git@github.com/Python-Cardano/pycardano.git"}
flask-cors = "^4.0.0"
pycose = "^1.1.0"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
